tests/neg-custom-args/captures/leaky.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:14:2 -----------------------------------------
14 |  val f: Any ->{a} Any = _ =>  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{a} Any}^{a}
   |  Required: test.runnable.Transform
15 |    a.print()
16 |    ()
17 |  Transform(f)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:20:2 -----------------------------------------
20 |  val f: Any ->{a} Any = _ => // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{a} Any}^{a}
   |  Required: test.runnable.Transform
21 |    a.print()
22 |    ()
23 |  val x = Transform(f)
24 |  x
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:27:2 -----------------------------------------
27 |  val f: Any ->{a} Any = _ =>  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{a} Any}^{a}
   |  Required: test.runnable.Transform
28 |    a.print()
29 |    ()
30 |  val x = Transform.app(f)
31 |  x
   |
   | longer explanation available when compiling with `-explain`
